// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusBadge should match snapshot when variant is dark 1`] = `
<div
  className="badge ebTxAb"
  color="#026cdf"
>
  snapshot test
</div>
`;

exports[`StatusBadge should match snapshot when variant is light 1`] = `
<div
  className="badge fBuEmj"
  color="#026cdf"
>
  light test
</div>
`;

exports[`StatusBadge should match snapshot when variant is undefined 1`] = `
<div
  className="badge ebTxAb"
  color="#026cdf"
>
  snapshot test
</div>
`;
